# renamer

./: .gitignore  README.md  api.Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json
.github/actions/: entrypoint.sh
.github/workflows/: api_build_and_deploy.yml  api_publish.yml  publish.yml  website_build_and_deploy.yml
renamer-api/: .gitignore  Cargo.toml  Dockerfile  log.txt
renamer-api/src/: api_rate.rs  controllers.rs  db.rs  lib.rs  log_layer.rs  mailgun.rs  main.rs  models.rs  utils.rs
renamer-api/src/orm/: connection.rs  error.rs  migrations.rs  mod.rs  model.rs  traits.rs
renamer-api/src/templates/: order_confirmation.html  remove_machine.html
renamer-website/: .gitignore  Dockerfile  mails.txt  package.json  pnpm-lock.yaml  svelte.config.js
renamer-website/src/: app.css  app.html
renamer-website/src/lib/: utils.ts
renamer-website/src/lib/components/: CardRevealedPointer.svelte  CircularProgress.svelte  Footer.svelte  NavBar.svelte
renamer-website/src/lib/components/download/: Download.svelte  DownloadButton.svelte  LinuxDownload.svelte  MacOsDownload.svelte  WindowsDownload.svelte  utils.ts
renamer-website/src/lib/components/pricing/: PriceCard.svelte  PricingSection.svelte  utils.ts
renamer-website/src/lib/server/: Stripe.ts
renamer-website/src/lib/translations/: index.ts
renamer-website/src/lib/translations/local/: en.ts  fr.ts
renamer-website/src/lib/types/: stripe.ts
renamer-website/src/models/: Product.ts
renamer-website/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte
renamer-website/src/routes/api/price/: +server.ts
renamer-website/src/routes/api/purchase/: +server.ts
renamer-website/src/routes/api/webhook/: +page.svelte  +server.ts
renamer-website/src/routes/download/: +page.svelte
renamer-website/src/routes/legal-mention/: +page.svelte
renamer-website/src/routes/licences/: +page.svelte
renamer-website/src/routes/manage-machines/: +page.svelte
renamer-website/src/routes/privacy-policy/: +page.svelte
renamer-website/src/routes/remove/: +page.svelte  +server.ts
renamer-website/static/: robots.txt  sitemap.xml
shared/: Cargo.toml
shared/bindings/: Machine.ts  UserMachine.ts
shared/src/: lib.rs
src/: app.css  app.html
src-api/: .env  Cargo.toml  Dockerfile
src-api/src/: controllers.rs  db.rs  main.rs  models.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  auth.rs  main.rs  rename_file.rs  utils.rs
src/lib/components/: CircularProgress.svelte  FormattersComponent.svelte  InputFiles.svelte  InputsLeftComponents.svelte  LanguageSelect.svelte  MenuBar.svelte  PresetListDialog.svelte  PulsatingButton.svelte  SavePresetDialog.svelte  SettingsDialog.svelte
src/lib/components/FileTable/: FileItem.svelte  FileTable.svelte  store.ts
src/lib/components/fileTable/: DataTable.svelte  FileItem.svelte  FileTable.svelte  data-table-checkbox.svelte  data-table-name.svelte  data-table-new-name.svelte  data-table-pagination.svelte  data-table-status.svelte  data-table-toolbar.svelte  data-table-view-options.svelte  data-table.svelte  store.ts
src/lib/components/formatterComponents/: AccordionFormatter.svelte  AddFormatterButton.svelte  BasicTextFormatterComponent.svelte  BirthDateFormatter.svelte  CasesFormatterComponent.svelte  CreationDateFormatterComponent.svelte  ExtensionFormatter.svelte  ExtensionFormatterComponent.svelte  FormatterComponent.svelte  NumberFormatter.svelte  NumberFormatterComponent.svelte  OriginalFileNameFormatterComponent.svelte  RegexFormatterComponent.svelte  RemoveFormatterComponent.svelte  SizeFormatterComponent.svelte
src/lib/components/list/: FileItem.svelte  FileItemStatus.svelte  HeaderCheckbox.svelte  ListView.svelte  ListViewHeader.svelte  ListViewToolBar.svelte  store.ts
src/lib/components/list/fileItemUi/: FileItemCheckbox.svelte  FileItemCreationDate.svelte  FileItemModDate.svelte  FileItemName.svelte  FileItemNewName.svelte  FileItemSize.svelte  FileItemStatus.svelte
src/lib/components/stringFormatterComponents/: NumerFormatter.svelte
src/lib/components/titleBar/components/: Button.svelte
src/lib/components/titleBar/controls/: MacOs.svelte
src/lib/translations/: index.ts
src/lib/translations/local/: en.ts  fr.ts
src/models/: File.ts  Formatter.ts  Preset.ts  Signal.ts  index.ts  store.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/mainWindow/: +page.svelte
src/routes/settings/: +page.svelte  settings.ts
src/routes/settings/ui/: About.svelte  General.svelte  LeftSide.svelte  License.svelte  SettingsItemCard.svelte
tauri-app/: package.json  pnpm-lock.yaml  tailwind.config.ts
tauri-app/src/: app.css  app.html
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/locales/: en.json  fr.json
tauri-app/src-tauri/src/: api.rs  app.rs  auth.rs  entities.rs  main.rs  rename_file.rs  store.rs  updater.rs  utils.rs  window.rs
tauri-app/src/lib/: os.ts  updater.ts
tauri-app/src/lib/components/: FormattersComponent.svelte  InputFiles.svelte  LanguageSelect.svelte  MenuBar.svelte  PresetListDialog.svelte  SavePresetDialog.svelte  ThemeSelect.svelte
tauri-app/src/lib/translations/: index.ts  translations.ts
tauri-app/src/models/: File.ts  Formatter.ts  Preset.ts  Signal.ts  User.ts  index.ts  store.svelte.ts  utils.ts
tauri-app/src/routes/: +layout.svelte  +layout.ts  +page.svelte
tauri-app/src/routes/app/: +layout.svelte  +page.svelte
tauri-app/src/routes/mainWindow/: +page.svelte
tauri-app/src/routes/settings/: +page.svelte  settings.ts
tauri-app/src/routes/terms/: +page.svelte
tauri-app/src/routes/update/: +page.svelte
(+52 files in other folders)
