[package]
name = "renamer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0"
dotenv = "0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
tower = { version = "0.5", features = ["buffer", "limit"] }
reqwest = { version = "0.12.7", features = ["multipart"] }
chrono = "0.4.38"
openssl = { version = "0.10", features = ["vendored"] }
renamer-shared = { path = "../shared" }
tower-http = { version = "0.6", features = ["cors"] }
http = "1.1.0"
dashmap = "6.1.0"

[dependencies.mongodb]
version = "3"
