[package]
name = "renamer-api"
version = "0.1.0"
edition = "2021"
default-run = "renamer-api"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
axum = "0"
dotenv = "0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
serde_json = "1"
tower = { version = "0.5", features = ["buffer", "limit"] }
reqwest = { version = "0.12.7", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
renamer-shared = { path = "../shared" }
tower-http = { version = "0.6", features = ["cors"] }
http = "1.1.0"
dashmap = "6.1.0"
async-trait = "0.1"

mongodb = "3"
bson = { version = "2.14.0", features = ["chrono-0_4"] }
