[package]
name = "src-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0"
dotenv = "0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
serde_json = "1"
uuid = { version = "1", features = ["v7"] }

[dependencies.mongodb]
version = "3"
