[package]
name = "renamer"
version = "0.0.0"
description = "A Tauri App"
authors = ["rahman"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.2", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.2", features = [] }
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-os = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-core = "2.0.0-beta.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.3", features = ["v4"] }

