[package]
name = "renamer"
version = "0.0.0"
description = "A Tauri App"
authors = ["rahman"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-os = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-core = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sys-locale = "0.3"
tauri-plugin-store = "2.0.0-rc"
tauri-plugin-process = "2.0.0-rc"
mid = "3"
online = { version = "4" }
reqwest = { version = "0", features = ["json"] }
lazy_static = "1"
tokio = { version = "1.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }



[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0.0-rc"
