[package]
name = "Renamer"
version = "0.0.0"
description = "A Tauri App"
authors = ["rahman"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-core = "2.0.0-beta.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sys-locale = "0.3"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
mid = "3"
online = { version = "4" }
reqwest = { version = "0", features = ["json"] }
lazy_static = "1"
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
whoami = "2.0.0-pre.1"
renamer-shared = { path = "../../shared" }
webbrowser = "1.0.2"

[target.'cfg(target_os = "linux")'.dependencies]
glib-sys = "0.20.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.2.0"
