[package]
name = "Renamer"
version = "1.0.0"
description = "Renamer is a file renaming tool that helps you rename files in bulk."
authors = ["rahman"]
edition = "2024"


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "default"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sys-locale = "0.3"
mid = "3"
online = { version = "4" }
reqwest = { version = "0", features = ["json"] }
lazy_static = "1"
tokio = { version = "1", features = ["full"] }
whoami = "2.0.0-pre.1"
renamer-shared = { path = "../../shared" }
webbrowser = "1.0.2"
rust-i18n = "3"

[target.'cfg(target_os = "linux")'.dependencies]
glib-sys = "0.20.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { version = "2" }
